--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background-color: aquamarine;
   height: screen;
   opacity: 0.8;
-  background-color: #ccc;
+  background-color: #282c34;
   position: fixed;
   width: 100%;
   height: 100%;
