--- a/src/styles/pictures.css
+++ b/src/styles/pictures.css
@@ -3,3 +3,16 @@
   width: 25%;
   margin: 2rem;
 }
+
+.title {
+  font-size: 2em;
+  transition: color 1s ease;
+  -webkit-transition: color 1s ease;
+  -moz-transition: color 1s ease;
+  -ms-transition: color 1s ease;
+  -o-transition: color 1s ease;
+}
+
+.title:hover {
+  color: aliceblue;
+}
