small styling changes to List Items on homepage

--- a/src/styles/pictures.css
+++ b/src/styles/pictures.css
@@ -16,3 +16,12 @@
 .title:hover {
   color: aliceblue;
 }
+
+li {
+  list-style-type: none;
+}
+
+#pictures-home {
+  display: flex;
+  flex-wrap: wrap;
+}
