adjusting spacing of list items, and photos within the list items + resized photos

--- a/src/styles/pictures.css
+++ b/src/styles/pictures.css
@@ -1,7 +1,7 @@
 .non-show-image {
-  height: 25%;
-  width: 25%;
-  margin: 2rem;
+  height: 160px;
+  width: 200px;
+  margin: 70px;
 }
 
 .title {
@@ -23,5 +23,11 @@ li {
 
 #pictures-home {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: space-around;
+}
+
+#pictures-home li {
+  text-align: center;
 }
