--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -20,3 +20,8 @@ li:hover {
   -ms-transition: all 0.7s ease;
   -o-transition: all 0.7s ease;
 }
+
+i {
+  align-self: center;
+  font-size: 30px;
+}
